--- a/css/jquery.fancybox.css
+++ b/css/jquery.fancybox.css
@@ -15,8 +15,8 @@
 .fancybox-container {
   position: fixed;
   top: 0;
-    right: 0;
-  width: 65vw;
+  right: 0;
+  width: 90vw;
   height: 100%;
   z-index: 99993;
   -webkit-tap-highlight-color: transparent;
@@ -306,7 +306,7 @@
   outline: 1px dotted #888; }
 
 .fancybox-close-small:hover:after {
-  color: #555;
+  color: #fff;
   background: #eee; }
 
 .fancybox-slide--iframe .fancybox-close-small {
