--- a/css/component.css
+++ b/css/component.css
@@ -1,226 +1,242 @@
 .grid {
-	max-width: none;
-	list-style: none;
-	margin: 0 auto;
-	padding: 0;
+    max-width: none;
+    list-style: none;
+    margin: 0 auto;
+    padding: 0;
 }
 
 .grid li {
-	display: block;
-	overflow: hidden;
-	float: left;
-	padding-top:0px;
-	padding-left: 80px;
-	padding-bottom: 50px;
-	width: 50%;
+    display: block;
+    overflow: hidden;
+    float: left;
+    padding-top: 0px;
+    padding-left: 80px;
+    padding-bottom: 50px;
+    width: 50%;
 }
 
 body .burger-menu {
-  margin: 0 auto;
-  width: 30px;
-  display: block;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  cursor: pointer;
-  height: 30px;
-}
-body .burger-menu .bar {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  height: 1px;
-  width: 100%;
-  display: block;
-  background-color: #000;
+    margin: 0 auto;
+    width: 30px;
+    display: block;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    cursor: pointer;
+    height: 30px;
 }
 
-.bar:nth-of-type(2){
-	 margin: 4px 0;
-	 opacity: 0;
+body .burger-menu .bar {
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    height: 1px;
+    width: 100%;
+    display: block;
+    background-color: #000;
+}
+
+.bar:nth-of-type(2) {
+    margin: 4px 0;
+    opacity: 0;
 }
 
 body .burger-menu--closed {
-  -webkit-transition-delay: 0.3s;
-          transition-delay: 0.3s;
+    -webkit-transition-delay: 0.3s;
+    transition-delay: 0.3s;
 }
+
 body .burger-menu--closed .bar {
-  float: right;
+    float: right;
 }
+
 body .burger-menu--closed .bar:nth-of-type(2) {
-  width: 100%;
-  -webkit-transition-property: margin, height, width;
-  transition-property: margin, height, width;
-  -webkit-transition-delay: 0.3s, 0.3s, 0s;
-          transition-delay: 0.3s, 0.3s, 0s;
+    width: 100%;
+    -webkit-transition-property: margin, height, width;
+    transition-property: margin, height, width;
+    -webkit-transition-delay: 0.3s, 0.3s, 0s;
+    transition-delay: 0.3s, 0.3s, 0s;
 }
+
 body .burger-menu--closed .bar:nth-of-type(3) {
-  width: 50%;
+    width: 50%;
 }
+
 body .burger-menu--closed:hover .bar:nth-of-type(2) {
-  width: 100%;
+    width: 100%;
 }
+
 body .burger-menu--closed:hover .bar:nth-of-type(3) {
-  width: 100%;
+    width: 100%;
 }
+
 body .burger-menu--opened {
-  padding-top: 12px;
+    padding-top: 12px;
 }
+
 body .burger-menu--opened .bar:nth-of-type(1) {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  -webkit-transition-delay: 0.3s;
-          transition-delay: 0.3s;
-  height: 1px;
-	width: 30px;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-transition-delay: 0.3s;
+    transition-delay: 0.3s;
+    height: 1px;
+    width: 30px;
 }
+
 body .burger-menu--opened .bar:nth-of-type(2) {
-  opacity: 0;
-  height: 0;
-  margin: -1px;
+    opacity: 0;
+    height: 0;
+    margin: -1px;
 
 }
+
 body .burger-menu--opened .bar:nth-of-type(3) {
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  -webkit-transition-delay: 0.3s;
-          transition-delay: 0.3s;
-  height: 1px;
-	width: 30px;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-transition-delay: 0.3s;
+    transition-delay: 0.3s;
+    height: 1px;
+    width: 30px;
 }
 
-span{
-	font-family: 'HelveticaNeue';
+span {
+    font-family: 'HelveticaNeue';
 }
 
 /* modifiche*/
 
-header{
-	top: 0px;
-	height: 100px;
-	width: 35vw;
-	position: fixed;
+header {
+    top: 0px;
+    height: 100px;
+    width: 35vw;
+    position: fixed;
 }
 
-#video{
-	padding-bottom: 8px;
+#video {
+    padding-bottom: 8px;
 }
 
-.navBar{
-	height: auto;
-	width: 100vw;
+.navBar {
+    height: auto;
+    width: 100vw;
 }
 
-.logo{
-	color: #000;
-	font-size: 14pt;
-	margin-top: 40px;
-	padding-left: 50px;
-	font-family: 'HelveticaNeue';
-	float: left;
+.logo {
+    color: #000;
+    font-size: 14pt;
+    margin-top: 40px;
+    padding-left: 50px;
+    font-family: 'HelveticaNeue';
+    float: left;
 }
 
-.containerBrands{
-	height: 100vh;
-	position: fixed;
-	background-color: #fff;
-	width: 10vw;
-	z-index: 1;
+.containerBrands {
+    height: 100vh;
+    position: fixed;
+    background-color: #fff;
+    width: 10vw;
+    z-index: 1;
 }
 
-.containerGallery{
-	height: auto;
-	width: 90vw;
-	float: right;
-	padding-left: 0px;
-	padding-top:0px;
-  transition: 0.2s all ease;
-	margin: 0;
-	z-index: 0;
+.containerGallery {
+    height: auto;
+    width: 90vw;
+    float: right;
+    padding-left: 0px;
+    padding-top: 0px;
+    transition: 0.2s all ease;
+    margin: 0;
+    z-index: 0;
 }
-.fullscreen{
+
+.fullscreen {
     width: 100% !important;
 }
 
-.clients{
-	font-family: 'HelveticaNeueMedium';
-	font-size: 9pt;
-	color: #000;
-	margin-top: 30vh;
-	letter-spacing: 1px;
-	width: 250px;
-	margin-left: 100px;
-	z-index: 10000000;
+.clients {
+    font-family: 'HelveticaNeueMedium';
+    font-size: 9pt;
+    color: #000;
+    margin-top: 30vh;
+    letter-spacing: 1px;
+    width: 250px;
+    margin-left: 100px;
+    z-index: 10000000;
 }
 
-.jewelry{
-	line-height: 130%;
+.jewelry {
+    line-height: 130%;
 }
 
-.clients li:hover{
-	color: red;
-	cursor: pointer;
+.clients li:hover {
+    color: red;
+    cursor: pointer;
 }
 
-.clients li.selected{
-	opacity: 1;
-	cursor: pointer;
-	font-size: 9pt;
-  text-decoration:underline;
-	color: red;
+.clients li.selected {
+    text-decoration: underline;
+    color: red;
 }
 
-.clients li{
-	opacity: 1;
-  transition: 0.3s all ease;
+.clients li {
+    cursor: pointer;
+    font-size: 9pt;
+    opacity: 1;
+    transition: 0.2s all ease;
+    line-height: 140%;
+    margin-bottom: 10px;
 }
 
 
-.clients li:selected{
-	opacity: 0;
+.clients li:selected {
+    opacity: 0;
 }
 
-.clients ul{
-	list-style: none;
-	line-height: 250%;
+.clients ul {
+    list-style: none;
+    line-height: 250%;
 }
 
-.copy{
-	color: #000;
-	bottom: 0px;
-	font-size: 8pt;
-	position: absolute;
-	right: 0px;
-	padding-right: 40px;
-	padding-bottom: 30px;
-	opacity: 0.8;
+.copy {
+    color: #000;
+    bottom: 0px;
+    font-size: 8pt;
+    position: absolute;
+    right: 0px;
+    padding-right: 40px;
+    padding-bottom: 30px;
+    opacity: 0.8;
 }
 
-.filter{
-	left: 50%;
+.filter {
+    left: 50%;
 }
 
-ul{
-	margin-right: 0px;
+.item {
+    transition: '0.4s all ease';
 }
 
-.grid li{
-	overflow: hidden;
+ul {
+    margin-right: 0px;
 }
 
-.grid effect-2{
-	margin: 0;
+.grid li {
+    overflow: hidden;
 }
 
-.grid figure{
-	overflow: hidden;
-	padding: 0px;
-	margin: 0px;
+.grid effect-2 {
+    margin: 0;
+}
+
+.grid figure {
+    overflow: hidden;
+    padding: 0px;
+    margin: 0px;
 }
 
 .grid img {
-	-moz-transition: all 0.3s;
-	-webkit-transition: all 0.3s;
-	transition: all 0.3s;
-	margin: 0;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    margin: 0;
 }
 
 /*.grid img:hover {
@@ -228,41 +244,41 @@ ul{
 	transform: scale(1.1);
 }*/
 
-.nextProject{
-	height: 20vh;
-	width: 100%;
+.nextProject {
+    height: 20vh;
+    width: 100%;
 }
 
-.nextProject p{
-	font-size: 20pt;
-	padding-top: 50px;
-	font-family: 'HelveticaNeue';
-	text-align: center;
-	color: #000;
+.nextProject p {
+    font-size: 20pt;
+    padding-top: 50px;
+    font-family: 'HelveticaNeue';
+    text-align: center;
+    color: #000;
 }
 
-.menuArea{
-	float: right;
-	padding-right: 40px;
-	margin-top: 30px;
+.menuArea {
+    float: right;
+    padding-right: 40px;
+    margin-top: 30px;
 
 }
 
-.arrowTop{
-	background-image: url(../images/arrowUp.png);
-	background-position: center;
-	background-size: contain;
-	height: 50px;
-	width: 50px;
-	right: 30px;
-	position: fixed;
-	bottom: 15px;
-	z-index: 1000;
-	text-align: center;
-	border: 1px solid #E6E6E6;
+.arrowTop {
+    background-image: url(../images/arrowUp.png);
+    background-position: center;
+    background-size: contain;
+    height: 50px;
+    width: 50px;
+    right: 30px;
+    position: fixed;
+    bottom: 15px;
+    z-index: 1000;
+    text-align: center;
+    border: 1px solid #E6E6E6;
 }
 
-.fancybox-button.fancybox-button--fullscreen{
+.fancybox-button.fancybox-button--fullscreen {
     display: none;
 }
 
@@ -270,145 +286,140 @@ ul{
 
 /* fine modifiche*/
 
-
-
-
 /* arrow*/
 
-
 * {
-  box-sizing: border box;
+    box-sizing: border box;
 }
 
 
 .btn,
 .nextProject button {
-  color: white;
-  border: none;
-  font-size: 10px;
-  font-size: 1rem;
-  color: white;
-  letter-spacing: 1.5px;
-  padding: 14px 21px;
-  padding: 1.4rem 2.1rem;
-  transition: color 0.1s cubic-bezier(0.16, 0.08, 0.355, 1), background 0.1s cubic-bezier(0.16, 0.08, 0.355, 1);
-  display: inline-block;
-  cursor: pointer;
-  width: 100%;
-  min-width: 200px;
-  min-width: 20rem;
-  outline: none;
-  vertical-align: middle;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-  @media (min-width: 400px) {
-    width: auto;
-  }
-  @media (min-width: 800px) {
-    font-size: 1.1rem;
-    padding: 1.6rem 2.8rem;
-  }
-  &:hover {
+    color: white;
+    border: none;
+    font-size: 10px;
+    font-size: 1rem;
+    color: white;
+    letter-spacing: 1.5px;
+    padding: 14px 21px;
+    padding: 1.4rem 2.1rem;
+    transition: color 0.1s cubic-bezier(0.16, 0.08, 0.355, 1), background 0.1s cubic-bezier(0.16, 0.08, 0.355, 1);
+    display: inline-block;
+    cursor: pointer;
+    width: 100%;
+    min-width: 200px;
+    min-width: 20rem;
+    outline: none;
+    vertical-align: middle;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    @media (min-width: 400px) {
+        width: auto;
+    }
+    @media (min-width: 800px) {
+        font-size: 1.1rem;
+        padding: 1.6rem 2.8rem;
+    }
+    &:hover {
 
-    border-color: lighten(#000, 5%);
-    color: #000;
-  }
+        border-color: lighten(#000, 5%);
+        color: #000;
+    }
 }
 
 .btn-border {
-  background-color: transparent;
-  color: #000;
+    background-color: transparent;
+    color: #000;
 }
 
 .btn-arrow {
-  position: relative;
-    transition: 300ms ease-out;
-  span {
-    display: inline-block;
     position: relative;
-    transition: all 300ms ease-out;
-    will-change: transform;
-  }
-  &:hover span {
-    transform: translate3d(-1rem, 0, 0);
-  }
-  svg {
-    position: absolute;
-    width: 1.1em;
-    right: 0px;
-    right: 0rem;
-    opacity: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: all 300ms ease-out;
-    will-change: right, opacity;
-    * {
-      stroke-width: 5;
-      stroke-color: transparent;
+    transition: 300ms ease-out;
+    span {
+        display: inline-block;
+        position: relative;
+        transition: all 300ms ease-out;
+        will-change: transform;
     }
-  }
-  &:hover svg {
-    opacity: 1;
-    right: -2rem;
-    color: #000;
-  }
+    &:hover span {
+        transform: translate3d(-1rem, 0, 0);
+    }
+    svg {
+        position: absolute;
+        width: 1.1em;
+        right: 0px;
+        right: 0rem;
+        opacity: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        transition: all 300ms ease-out;
+        will-change: right, opacity;
+        * {
+            stroke-width: 5;
+            stroke-color: transparent;
+        }
+    }
+    &:hover svg {
+        opacity: 1;
+        right: -2rem;
+        color: #000;
+    }
 }
 
 /* fine arrow*/
 
-
 /* Media query*/
 
-@media only screen and (max-width : 768px) {
+@media only screen and (max-width: 768px) {
 
-	header{
-		top: 0px;
-		height: 90px;
-		width: 100vw;
-		position: fixed;
-		background-color: #fff;
-		z-index: 10000;
-	}
+    header {
+        top: 0px;
+        height: 90px;
+        width: 100vw;
+        position: fixed;
+        background-color: #fff;
+        z-index: 10000;
+    }
 
-	.logo{
-		margin-top: 35px;
+    .logo {
+        margin-top: 35px;
 
-	}
+    }
 
-	.menuArea{
-		margin-top: 35px;
-	}
+    .menuArea {
+        margin-top: 35px;
+    }
 
-	.containerBrands{
-		width: 100vw;
-		margin-top: 100px;
-		height: auto;
-		position: relative;
-		padding-top: 30px;
-		padding-bottom: 30px;
-	}
+    .containerBrands {
+        width: 100vw;
+        margin-top: 100px;
+        height: auto;
+        position: relative;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
 
-	.clients{
-		text-align: center;
-		margin-top: 0px;
-		margin-left: 0px;
-	}
+    .clients {
+        text-align: center;
+        margin-top: 0px;
+        margin-left: 0px;
+    }
 
-	.copy{
-		display: none;
-	}
+    .copy {
+        display: none;
+    }
 
-	.containerGallery{
-		height: auto;
-		width: 100vw;
-		float: none;
-		padding: 0px;
-		padding-left: 4px;
-		padding-right: 4px;
-		padding-top: 0px;
-		z-index: 0;
-	}
+    .containerGallery {
+        height: auto;
+        width: 100vw;
+        float: none;
+        padding: 0px;
+        padding-left: 4px;
+        padding-right: 4px;
+        padding-top: 0px;
+        z-index: 0;
+    }
 
 }
 
@@ -417,162 +428,229 @@ ul{
 .grid li.shown,
 .no-js .grid li,
 .no-cssanimations .grid li {
-	opacity: 1;
+    opacity: 1;
 }
 
 .grid li a,
 .grid li img,
 .grid li video {
-	outline: none;
-	border: none;
-	display: block;
-	max-width: 100%;
+    outline: none;
+    border: none;
+    display: block;
+    max-width: 100%;
 }
 
 /* Effect 1: opacity */
 
 @-webkit-keyframes fadeIn {
-	0% { }
-	100% { opacity: 1; }
+    0% {}
+    100% {
+        opacity: 1;
+    }
 }
 
 @keyframes fadeIn {
-	0% { }
-	100% { opacity: 1; }
+    0% {}
+    100% {
+        opacity: 1;
+    }
 }
 
 /* Effect 2: Move Up */
 
-
 @-webkit-keyframes moveUp {
-	0% { }
-	100% { -webkit-transform: translateY(0); opacity: 1; }
+    0% {}
+    100% {
+        -webkit-transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 @keyframes moveUp {
-	0% { }
-	100% { -webkit-transform: translateY(0); transform: translateY(0); opacity: 1; }
+    0% {}
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 
 
 @-webkit-keyframes scaleUp {
-	0% { }
-	100% { -webkit-transform: scale(1); opacity: 1; }
+    0% {}
+    100% {
+        -webkit-transform: scale(1);
+        opacity: 1;
+    }
 }
 
 @keyframes scaleUp {
-	0% { }
-	100% { -webkit-transform: scale(1); transform: scale(1); opacity: 1; }
+    0% {}
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
 /* Effect 4: fall perspective */
+
 .grid.effect-4 {
-	-webkit-perspective: 1300px;
-	perspective: 1300px;
+    -webkit-perspective: 1300px;
+    perspective: 1300px;
 }
 
 .grid.effect-4 li.animate {
-	-webkit-transform-style: preserve-3d;
-	transform-style: preserve-3d;
-	-webkit-transform: translateZ(400px) translateY(300px) rotateX(-90deg);
-	transform: translateZ(400px) translateY(300px) rotateX(-90deg);
-	-webkit-animation: fallPerspective .8s ease-in-out forwards;
-	animation: fallPerspective .8s ease-in-out forwards;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transform: translateZ(400px) translateY(300px) rotateX(-90deg);
+    transform: translateZ(400px) translateY(300px) rotateX(-90deg);
+    -webkit-animation: fallPerspective .8s ease-in-out forwards;
+    animation: fallPerspective .8s ease-in-out forwards;
 }
 
 @-webkit-keyframes fallPerspective {
-	0% { }
-	100% { -webkit-transform: translateZ(0px) translateY(0px) rotateX(0deg); opacity: 1; }
+    0% {}
+    100% {
+        -webkit-transform: translateZ(0px) translateY(0px) rotateX(0deg);
+        opacity: 1;
+    }
 }
 
 @keyframes fallPerspective {
-	0% { }
-	100% { -webkit-transform: translateZ(0px) translateY(0px) rotateX(0deg); transform: translateZ(0px) translateY(0px) rotateX(0deg); opacity: 1; }
+    0% {}
+    100% {
+        -webkit-transform: translateZ(0px) translateY(0px) rotateX(0deg);
+        transform: translateZ(0px) translateY(0px) rotateX(0deg);
+        opacity: 1;
+    }
 }
 
 /* Effect 5: fly (based on http://lab.hakim.se/scroll-effects/ by @hakimel) */
+
 .grid.effect-5 {
-	-webkit-perspective: 1300px;
-	perspective: 1300px;
+    -webkit-perspective: 1300px;
+    perspective: 1300px;
 }
 
 
 
 @-webkit-keyframes fly {
-	0% { }
-	100% { -webkit-transform: rotateX(0deg); opacity: 1; }
+    0% {}
+    100% {
+        -webkit-transform: rotateX(0deg);
+        opacity: 1;
+    }
 }
 
 @keyframes fly {
-	0% { }
-	100% { -webkit-transform: rotateX(0deg); transform: rotateX(0deg); opacity: 1; }
+    0% {}
+    100% {
+        -webkit-transform: rotateX(0deg);
+        transform: rotateX(0deg);
+        opacity: 1;
+    }
 }
 
 /* Effect 6: flip (based on http://lab.hakim.se/scroll-effects/ by @hakimel) */
+
 .grid.effect-6 {
-	-webkit-perspective: 1300px;
-	perspective: 1300px;
+    -webkit-perspective: 1300px;
+    perspective: 1300px;
 }
 
 
 
 @-webkit-keyframes flip {
-	0% { }
-	100% { -webkit-transform: rotateX(0deg); opacity: 1; }
+    0% {}
+    100% {
+        -webkit-transform: rotateX(0deg);
+        opacity: 1;
+    }
 }
 
 @keyframes flip {
-	0% { }
-	100% { -webkit-transform: rotateX(0deg); transform: rotateX(0deg); opacity: 1; }
+    0% {}
+    100% {
+        -webkit-transform: rotateX(0deg);
+        transform: rotateX(0deg);
+        opacity: 1;
+    }
 }
 
 /* Effect 7: helix (based on http://lab.hakim.se/scroll-effects/ by @hakimel) */
+
 .grid.effect-7 {
-	-webkit-perspective: 1300px;
-	perspective: 1300px;
+    -webkit-perspective: 1300px;
+    perspective: 1300px;
 }
 
 
 
 @-webkit-keyframes helix {
-	0% { }
-	100% { -webkit-transform: rotateY(0deg); opacity: 1; }
+    0% {}
+    100% {
+        -webkit-transform: rotateY(0deg);
+        opacity: 1;
+    }
 }
 
 @keyframes helix {
-	0% { }
-	100% { -webkit-transform: rotateY(0deg); transform: rotateY(0deg); opacity: 1; }
+    0% {}
+    100% {
+        -webkit-transform: rotateY(0deg);
+        transform: rotateY(0deg);
+        opacity: 1;
+    }
 }
 
 /* Effect 8:  */
+
 .grid.effect-8 {
-	-webkit-perspective: 1300px;
-	perspective: 1300px;
+    -webkit-perspective: 1300px;
+    perspective: 1300px;
 }
 
 
 
 @-webkit-keyframes popUp {
-	0% { }
-	70% { -webkit-transform: scale(1.1); opacity: .8; -webkit-animation-timing-function: ease-out; }
-	100% { -webkit-transform: scale(1); opacity: 1; }
+    0% {}
+    70% {
+        -webkit-transform: scale(1.1);
+        opacity: .8;
+        -webkit-animation-timing-function: ease-out;
+    }
+    100% {
+        -webkit-transform: scale(1);
+        opacity: 1;
+    }
 }
 
 @keyframes popUp {
-	0% { }
-	70% { -webkit-transform: scale(1.1); transform: scale(1.1); opacity: .8; -webkit-animation-timing-function: ease-out; animation-timing-function: ease-out; }
-	100% { -webkit-transform: scale(1); transform: scale(1); opacity: 1; }
+    0% {}
+    70% {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+        opacity: .8;
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
 @media screen and (max-width: 900px) {
-	.grid li {
-		width: 50%;
-	}
+    .grid li {
+        width: 50%;
+    }
 }
 
 @media screen and (max-width: 400px) {
-	.grid li {
-		width: 100%;
-	}
+    .grid li {
+        width: 100%;
+    }
 }
