--- a/css/default.css
+++ b/css/default.css
@@ -15,6 +15,11 @@
     src: url(../fonts/HelveticaNeueMedium.ttf);
 }
 
+@font-face {
+    font-family: HelveticaNeueRegular;
+    src: url(../fonts/HelveticaNeue.ttf);
+}
+
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 body, html { font-size: 100%; padding: 0; margin: 0;}
 
