--- a/css/jquery.fancybox.css
+++ b/css/jquery.fancybox.css
@@ -326,16 +326,19 @@
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 60px 30px 0 30px;
-  background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.1) 20%, rgba(0, 0, 0, 0.2) 40%, rgba(0, 0, 0, 0.6) 80%, rgba(0, 0, 0, 0.8) 100%);
+/*  padding: 60px 30px 0 30px;*/
+/*  background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.1) 20%, rgba(0, 0, 0, 0.2) 40%, rgba(0, 0, 0, 0.6) 80%, rgba(0, 0, 0, 0.8) 100%);*/
   pointer-events: none; }
 
 .fancybox-caption {
-  padding: 30px 0;
-  border-top: 1px solid rgba(255, 255, 255, 0.4);
-  font-size: 14px;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  color: #fff;
+  padding: 15px 0;
+/*  border-top: 1px solid rgba(255, 255, 255, 0.4);*/
+  font-size: 16px;
+  font-family: "HelveticaNeue";
+  color: #000;
+    text-align: center;
+/*    text-decoration: underline;*/
+/*    letter-spacing: 1px;*/
   line-height: 20px;
   -webkit-text-size-adjust: none; }
 
