--- a/css/component.css
+++ b/css/component.css
@@ -3,6 +3,7 @@
     list-style: none;
     margin: 0 auto;
     padding: 0;
+    z-index: 0;
 }
 
 .grid li {
@@ -12,6 +13,7 @@
     padding-top: 0px;
     padding-left: 80px;
     padding-bottom: 50px;
+    z-index: 0;
     width: 50%;
 }
 
@@ -110,6 +112,10 @@ header {
     position: fixed;
 }
 
+.menuVoice{
+  display: none;
+}
+
 #video {
     padding-bottom: 8px;
 }
@@ -126,6 +132,7 @@ header {
     padding-left: 50px;
     font-family: 'HelveticaNeue';
     float: left;
+    z-index: 99;
 }
 
 .containerBrands {
@@ -155,7 +162,7 @@ header {
   font-family: 'HelveticaNeueLight';
   font-size: 12pt;
   color: #000;
-  z-index: 1;
+  z-index: 3;
   letter-spacing: 1px;
   line-height: 200%;
 }
@@ -178,7 +185,7 @@ header {
     width: 400px;
     position: absolute;
     margin-left:120px;
-    z-index: 1;
+    z-index: 0;
 }
 
 .jewelry {
@@ -187,6 +194,7 @@ header {
 
 .filter{
   padding-top: 10px;
+  z-index: 3;
 }
 
 .filter li:hover {
@@ -407,6 +415,14 @@ ul {
         z-index: 10000;
     }
 
+    .grid li {
+        display: block;
+        overflow: hidden;
+        float: left;
+        padding: 10px;
+        width: 50%;
+    }
+
     .logo {
         margin-top: 35px;
 
@@ -414,22 +430,51 @@ ul {
 
     .menuArea {
         margin-top: 35px;
+        margin-left: 15%;
+    }
+
+    .mainMenu{
+      width: 70%;
+      margin-right: 15%;
+      margin-left: 15%;
     }
 
     .containerBrands {
         width: 100vw;
-        margin-top: 100px;
+        /*margin-top: 100px;*/
+        margin-top: 80px;
         height: auto;
         position: relative;
-        padding-top: 30px;
+        /*padding-top: 30px;*/
         padding-bottom: 30px;
+        padding-top: 30px;
     }
 
     .clients {
-        text-align: center;
-        margin-top: 0px;
-        margin-left: 0px;
-        margin-left: 60px;
+      width: 70%;
+      position: relative;
+      margin-top: 0px;
+      margin-left: 15%;
+    }
+
+    .filter{
+      padding-top: 10px;
+      margin: 0px;
+      padding-left: 0px;
+      width: 80%;
+      margin-left: 10%;
+      font-size: 9pt;
+
+    }
+
+    ul{
+      margin: 0px;
+    }
+
+    .mainMenu{
+      font-size: 10pt;
+      margin: 0px;
+      padding: 0px;
     }
 
     .copy {
