--- a/css/default.css
+++ b/css/default.css
@@ -20,6 +20,83 @@
     src: url(../fonts/HelveticaNeue.ttf);
 }
 
+@font-face {
+    font-family: HelveticaNeueExtraLight;
+    src: url(../fonts/HelveticaNeue-UltraLight.ttf);
+}
+
+.container-fluid{
+    padding-right:15px;
+    padding-left:15px;
+    margin-right:auto;
+    margin-left:auto;
+    overflow: auto;
+    overflow-x: hidden;
+}
+.menuTitle{
+    color: #000;
+    font-family: 'HelveticaNeueExtraLight';
+    margin-top: 10%;
+    margin-left: 5%;
+    position: relative;
+}
+.menuTitle h1{
+    font-size: 240px;
+    width: 150vw;
+}
+.col-right h5{
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-top: 1%;
+    color: #000;
+    font-family: 'HelveticaNeueExtraLight';
+}
+.col-left{
+    width: 38%;
+    margin-left: 5%;
+    display: inline-block;
+}
+.col-right{
+    width: 50%;
+    display: inline-block;
+}
+.row{
+    margin-top: 7%;
+}
+.menuBlockTitle{
+    vertical-align: top;
+    font-family: "HelveticaNeue";
+    color: #000;
+    text-transform: uppercase;
+    font-size: 18px;
+}
+.menuText{
+    color: #000;
+    font-family: "HelveticaNeue";
+    font-size: 15px;
+    line-height: 30px;
+    letter-spacing: 1%;
+}
+#last{
+    margin-bottom: 2%;
+    font-size: 14px;
+/*    text-align: right;*/
+}
+.close{
+    color: #000;
+    font-family: "HelveticaNeue";
+    font-size: 16px;
+    line-height: 30px;
+    text-align: right;
+    margin-top: 40px;
+    margin-right: 50px;
+    transition: 0.2s all ease;
+}
+.close span:hover{
+    color: #909090;
+    cursor: pointer;
+}
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 body, html { font-size: 100%; padding: 0; margin: 0;}
 
