Fixed new font problem

--- a/css/default.css
+++ b/css/default.css
@@ -26,7 +26,7 @@
 }
 @font-face {
     font-family: ATSackers;
-    src: url(../fonts/AT_Sackers_Heavy_Gothic.ttf);
+    src: url(../fonts/sackersgothicstd-heavy.otf);
 }
 
 body{
