--- a/css/default.css
+++ b/css/default.css
@@ -34,18 +34,23 @@ body{
 }
 
 .container-fluid{
-    padding-right:15px;
-    padding-left:15px;
+    /*padding-right:15px;
+    padding-left:15px;*/
     margin-right:auto;
     margin-left:auto;
     overflow: auto;
     overflow-x: hidden;
     display: none;
 }
+
+row{
+  padding-left: 15px;
+  padding-right: 15PX;
+}
 .menuTitle{
     color: #000;
     font-family: 'HelveticaNeueExtraLight';
-    margin-top: 10%;
+    margin-top: 15%;
     margin-left: 5%;
     position: relative;
     opacity: 0.99;
@@ -95,7 +100,6 @@ body{
 .close{
     color: #000;
     font-size: 16px;
-    line-height: 30px;
     text-align: right;
     margin-top: 40px;
     margin-right: 50px;
